--- a/views/cadastrarClienteGerente.hbs
+++ b/views/cadastrarClienteGerente.hbs
@@ -100,7 +100,7 @@
                             <li><a class="dropdown-item" href="">Gerar Relatórios</a></li>
                             <li><a class="dropdown-item" href="cadastrarClienteGerente">Gerar Contratos</a></li>
                             <li><a class="dropdown-item" href="editarDados">Editar Dados</a></li>
-                            <li><a class="dropdown-item" href="">Cadastrar Produtos</a></li>
+                            <li><a class="dropdown-item" href="produtos">Produtos</a></li>
                             <li><a class="dropdown-item" href="/">Sair</a></li>
 
                         </ul>
