--- a/views/telaInicialGerente.hbs
+++ b/views/telaInicialGerente.hbs
@@ -108,7 +108,7 @@
                             <li><a class="dropdown-item" href="">Gerar Relatórios</a></li>
                             <li><a class="dropdown-item" href="cadastrarClienteGerente">Gerar Contratos</a></li>
                             <li><a class="dropdown-item" href="editarDados">Editar Dados</a></li>
-                            <li><a class="dropdown-item" href="">Cadastrar Produtos</a></li>
+                            <li><a class="dropdown-item" href="produtos">Produtos</a></li>
                             <li><a class="dropdown-item" href="sair">Sair</a></li>
 
                         </ul>
@@ -164,9 +164,9 @@
                 <div class="card card-custom">
                     <div class="card-body d-flex flex-column align-items-center justify-content-center">
                         <i class="bi bi-box-seam card-icon"></i>
-                        <h5 class="card-title">Cadastrar Produtos</h5>
-                        <p class="card-text text-white text-center">Adicionar novos produtos ao sistema.</p>
-                        <a href="" class="btn btn-light">Acessar</a>
+                        <h5 class="card-title">Produtos</h5>
+                        <p class="card-text text-white text-center">Gerenciar produtos do sistema.</p>
+                        <a href="produtos" class="btn btn-light">Acessar</a>
                     </div>
                 </div>
             </div>
