--- a/views/telaInicialOp.hbs
+++ b/views/telaInicialOp.hbs
@@ -107,8 +107,7 @@
                             <li><a class="dropdown-item" href="">Gerar Relatórios</a></li>
                             <li><a class="dropdown-item" href="cadastrarCliente">Gerar Contratos</a></li>
                             <li><a class="dropdown-item" href="atualizarOperador">Editar Dados</a></li>
-
-                            <li><a class="dropdown-item" href="">Cadastrar Produtos</a></li>
+                            <li><a class="dropdown-item" href="produtos">Produtos</a></li>
                             <li><a class="dropdown-item" href="sair">Sair</a></li>
 
                         </ul>
@@ -139,7 +138,7 @@
                         <i class="bi bi-file-earmark-text-fill card-icon"></i>
                         <h5 class="card-title">Gerar Contrato</h5>
                         <p class="card-text text-white text-center">Criar contratos para eventos.</p>
-                        <a href="/cadastrarCliente" class="btn btn-light">Acessar</a>
+                        <a href="cadastrarCliente" class="btn btn-light">Acessar</a>
                     </div>
                 </div>
                 <!-- Card 3: Editar Dados -->
@@ -157,7 +156,7 @@
                         <i class="bi bi-box-seam card-icon"></i>
                         <h5 class="card-title">Cadastrar Produtos</h5>
                         <p class="card-text text-white text-center">Adicionar novos produtos ao sistema.</p>
-                        <a href="" class="btn btn-light">Acessar</a>
+                        <a href="produtos" class="btn btn-light">Acessar</a>
                     </div>
                 </div>
             </div>
