--- a/views/atualizarOperadorGerente.hbs
+++ b/views/atualizarOperadorGerente.hbs
@@ -75,7 +75,7 @@
                             <li><a class="dropdown-item" href="">Gerar Relatórios</a></li>
                             <li><a class="dropdown-item" href="cadastrarClienteGerente">Gerar Contratos</a></li>
                             <li><a class="dropdown-item" href="editarDados">Editar Dados</a></li>
-                            <li><a class="dropdown-item" href="">Cadastrar Produtos</a></li>
+                            <li><a class="dropdown-item" href="produtos">Produtos</a></li>
                             <li><a class="dropdown-item" href="sair">Sair</a></li>
 
                         </ul>
@@ -125,6 +125,15 @@
                                 <label for="exampleInputEmail1" class="form-label"
                                     style="color: var(--text-color);">Alterar e-mail</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1" name="email">
+                            </div>
+
+                             <div class="mb-3">
+                                <div class="form-check form-check-reverse">
+                                    <input class="form-check-input" type="checkbox" id="reverseCheck1" name="gerente" value="true">
+                                    <label class="form-check-label" for="reverseCheck1">
+                                        Gerente
+                                    </label>
+                                </div>
                             </div>
 
                             <button type="submit" class="btn btn-primary">Atualizar dados</button>
