Adicionar mudanças relacionadas a gerar contrato

--- a/views/paginaContrato.hbs
+++ b/views/paginaContrato.hbs
@@ -105,7 +105,7 @@
                             <div class="mb-3 row">
                                 <label for="contratante" class="col-sm-4 col-form-label">Contratante:</label>
                                 <div class="col-sm-8">
-                                    <input type="text" class="form-control" id="nomeContratante" readonly disabled>
+                                    <input type="text" class="form-control" id="contratante" name="nomeContratante" disabled>
 
                                 </div>
                             </div>
@@ -113,7 +113,7 @@
                                 <label for="cpfCnpj" class="col-sm-4 col-form-label">CPF ou CNPJ:</label>
                                 <div class="col-sm-8">
 
-                                    <input type="text" class="form-control" id="cpfCnpj" readonly disabled>
+                                    <input type="text" class="form-control" id="cpfCnpj" name="cpfCnpj">
 
                                 </div>
                             </div>
@@ -121,7 +121,7 @@
                                 <label for="endereco" class="col-sm-4 col-form-label">Endereço:</label>
                                 <div class="col-sm-8">
 
-                                    <input type="text" class="form-control" id="enderecoCliente" readonly disabled>
+                                    <input type="text" class="form-control" id="endereco" name="enderecoCliente" disabled>
 
                                 </div>
                             </div>
